Improve code readability